dataset/local/tf_rds_proxy_tls/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_db_proxy
        name: my_proxy
        values:
          name: my-rds-proxy
          engine_family: MYSQL
          role_arn: arn:aws:iam::123456789012:role/rds-proxy-role
          require_tls: true
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_db_proxy
        name: my_proxy
        values:
          name: my-rds-proxy
          engine_family: MYSQL
          role_arn: arn:aws:iam::123456789012:role/rds-proxy-role
          require_tls: false
